# nerve

./: .env.example  .gitignore  AGENTS.md  README.md  llms.txt  pyproject.toml
.cursor/skills/navigating-nerve/: SKILL.md
.cursor/skills/using-python/: SKILL.md
config/: contrast_pairs.yaml
data/assets/subcortical/: accumbens.gii  amygdala.gii  caudate.gii  hippocampus.gii  pallidum.gii  putamen.gii  thalamus.gii
docs/: AI.md  DEPLOY_GCS.md  DESIGN.md  GEO.md  LIMITATIONS.md
examples/: music_genre_contrast.py
examples/config/: contrast_pairs.yaml
scripts/: analyze_engagement.py  batch_predict_subcortical.sh  batch_predict_user.sh  gcs-cors.json  generate_runs_index.py  import_downloads.sh  patch_manifests_mp3.py  prepare_stimuli.py  prepare_stimuli.sh  transcode_stimuli_mp3.py  upload_gcs.sh  verify_stimuli.py
src/nerve/: __init__.py  cli.py  device.py  types.py
src/nerve/analysis/: __init__.py  acoustic_features.py  aggregate.py  contrast.py  engagement.py  subcortical_engagement.py
src/nerve/backends/: __init__.py  tribe_v2.py
src/nerve/export/: __init__.py  atlas_export.py  border_edges.py  gifti_writer.py  npz_io.py  region_labels.py  subcortical_mesh.py  web_bundle.py
src/nerve/parcellation/: __init__.py  base.py  schaefer.py  subcortical.py
src/nerve/preprocess/: __init__.py  hemodynamic.py  normalize.py
src/nerve/viz/: __init__.py  surface.py
stimuli/: LICENSES.md  README.md  manifest.user.yaml.example  manifest.yaml
tests/: test_acoustic_features.py  test_device.py  test_engagement.py  test_export.py  test_subcortical_engagement.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/api/runs/[runId]/[...file]/: route.ts
web/app/api/stimulus/[...path]/: route.ts
web/app/compare/: CompareClient.tsx  page.tsx
web/app/matrix/: page.tsx
web/app/tracks/[id]/: TrackEngagementPanel.tsx  TrackViewerClient.tsx  page.tsx
web/components/: BrainColorbar.tsx  BrainRegionLegend.tsx  BrainViewer.tsx  DeviceBadge.tsx  DominantSegmentTimeline.tsx  EngagementSummaries.tsx  EngagementTimeline.tsx  GeoFaq.tsx  JsonLd.tsx  ParcelHeatmap.tsx  SiteNav.tsx  StimulusAudio.tsx  StimulusPlayback.tsx  SubcorticalEngagementTimeline.tsx  Timeline.tsx  TrackGalleryRow.tsx
web/lib/: assets.ts  atlas.ts  brainMapProcessor.ts  engagement.ts  galleryOrder.ts  geo.ts  loadRun.ts  meshBundle.ts  parcels.ts  subcortical.ts  trackSources.ts
web/public/: llms.txt
