[project]
name = "nerve"
version = "0.1.0"
description = "Interpretability layer on TRIBE v2 BOLD predictions"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy==2.2.6",
    "torch>=2.5.1,<2.7",
    "nilearn>=0.11.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "nibabel>=5.2.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "tribev2[plotting]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
nerve = "nerve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nerve"]

[tool.uv.sources]
tribev2 = { git = "https://github.com/facebookresearch/tribev2.git", rev = "34f52344" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
